examples/canary-project/src/bad/consumer-d.ts
import { hub } from './hub.js'
export const consumer_d = (): string => hub()
